package NYT.NTableServer.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqAddTableChunks
{
    repeated bytes ChunkIds = 3;
}

message TRspAddTableChunks
{ }

////////////////////////////////////////////////////////////////////////////////
